# youtube-transcript-search

./: .gitignore  main.py  pyproject.toml
app/config/: config.py
app/data/: dummy.py
app/models/: transcripts.py  youtube.py
app/services/: pokemon.py  transcripts.py
