[project]
name = "youtube-transcript-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.135.2",
    "google-api-python-client>=2.193.0",
    "pysocks>=1.7.1",
    "youtube-transcript-api>=1.2.4",
]
